# Operation-Distro

./: 89.txt  CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  readfile.cpp  ui_mainwindow.h
